--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
