--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-beautiful-dnd": "13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1"
